--- a/style.css
+++ b/style.css
@@ -85,13 +85,13 @@ body{
     margin: 0 auto;
 }
 
-.parametro-senha-botoes{
+.parametro-senha-botoes {
     display: flex;
     justify-content: center;
 }
 
-.parametro-senha__botao{
-    background-color:var(--fundo-texto);
+.parametro-senha__botao {
+    background-color: var(--fundo-texto);
     color: var(--branco);
     border: 2px solid var(--borda);
     padding: 24px;
@@ -99,12 +99,22 @@ body{
     cursor: pointer;
 }
 
-.parametro-senha__texto{
+.parametro-senha__texto {
     padding: 24px;
     border-top: 2px solid var(--borda);
     border-bottom: 2px solid var(--borda);
     margin: 0;
     font-size: 24px;
+}
+
+label {
+    font-size: 20px;
+}
+
+.checkbox {
+    width: 20px;
+    height: 20px;
+    cursor: pointer;
 }
 
 @media screen and (min-width: 768px) {
